objects/Server_Deployment_Subscriptions__c/Server_Deployment_Subscriptions__c.object-meta.xml
<CustomObject>
    <description>Records the relationship between Server Deployments and Subscriptions. Used in the licensing process by the Automated Management Platform (AMP) maintained by the Tech Tools team</description>
    <label>Server Deployment Subscriptions</label>
    <nameField>
        <displayFormat>SDS-{000000}</displayFormat>
        <label>Server Deployment Subscriptions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Server Deployment Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>