objects/Server_Deployment_Subscriptions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Server Deployment Subscriptions</relationshipLabel>
    <relationshipName>Server_Deployment_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>