objects/Server_Deployment_Subscriptions__c/fields/Account_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Account_Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Entitlement</label>
    <referenceTo>Account_Entitlements__c</referenceTo>
    <relationshipName>Server_Deployment_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>