objects/Server_Deployment_Subscriptions__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <description>Formula field use to concatenate the Subscription Start Date and Subscription End Date so that we can use the field on the Right Rail Related List</description>
    <formula>TEXT(MONTH(Subscription_Start_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Subscription_Start_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Subscription_Start_Date__c)) &amp; &quot; to &quot; &amp; TEXT(MONTH(Subscription_End_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Subscription_End_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Subscription_End_Date__c))


/*TEXT(Subscription_Start_Date__c) &amp; &quot; to &quot; &amp; TEXT(Subscription_End_Date__c)*/</formula>
    <label>CPQ Dates</label>
    <type>Text</type>
</CustomField>