objects/Server_Deployment_Subscriptions__c/fields/ELV_Dates__c.field-meta.xml
<CustomField>
    <fullName>ELV_Dates__c</fullName>
    <description>Formula field use to concatenate the Subscription Start Date and Subscription End Date so that we can use the field on the Right Rail Related List (SS-13765)</description>
    <formula>TEXT(MONTH(ELV_Subscription_Start_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(ELV_Subscription_Start_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(ELV_Subscription_Start_Date__c)) &amp; &quot; to &quot; &amp; TEXT(MONTH(ELV_Subscription_End_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(ELV_Subscription_End_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(ELV_Subscription_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dates</label>
    <type>Text</type>
</CustomField>