objects/Server_Deployment_Subscriptions__c/fields/ELV_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Code__c</fullName>
    <description>Formula that retrieves the Product Code from the Related Subscription Product. SS-13765</description>
    <formula>ELV_Subscription__r.ELV_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>