objects/Server_Deployment_Subscriptions__c/fields/ELV_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Name__c</fullName>
    <description>Formula that retrieves the Product Name from the Related Subscription Product. SS-13765</description>
    <formula>ELV_Subscription__r.Ruby__ProductNameText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>