objects/Server_Deployment_Subscriptions__c/fields/ELV_Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Subscription_End_Date__c</fullName>
    <description>Formula to populate the related Subscription End Date. SS-13765</description>
    <formula>ELV_Subscription__r.Ruby__SubscriptionEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to populate the related Subscription End Date.</inlineHelpText>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>