objects/Server_Deployment_Subscriptions__c/fields/ELV_Subscription_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Subscription_Line_Type__c</fullName>
    <description>The Quote Line Type from the Related Subscription. Formula field. SS-13765</description>
    <formula>TEXT(ELV_Subscription__r.ELV_Transaction_Type1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Quote Line Type that is inherited from the Subscription, populated by a formula.</inlineHelpText>
    <label>Subscription Line Type</label>
    <type>Text</type>
</CustomField>