objects/Server_Deployment_Subscriptions__c/fields/ELV_Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>ELV_Subscription_Number__c</fullName>
    <description>Formula to populated the related Subscription Number. SS-13765</description>
    <formula>ELV_Subscription__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription #</label>
    <type>Text</type>
</CustomField>