objects/Server_Deployment_Subscriptions__c/fields/ELV_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Subscription_Start_Date__c</fullName>
    <description>Formula to populate the related Subscription Start Date. SS-13765</description>
    <formula>ELV_Subscription__r.Ruby__SubscriptionStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to populate the related Subscription Start Date.</inlineHelpText>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>