objects/Server_Deployment_Subscriptions__c/fields/End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Server Deployment Subscriptions (End User Account)</relationshipLabel>
    <relationshipName>Server_Deployment_Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>