objects/Server_Deployment_Subscriptions__c/fields/Entitlement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_End_Date__c</fullName>
    <description>Formula to populate the related Entitlement End Date.</description>
    <formula>Account_Entitlement__r.End_Date__c</formula>
    <inlineHelpText>Formula to populate the related Entitlement End Date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>