objects/Server_Deployment_Subscriptions__c/fields/Entitlement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Start_Date__c</fullName>
    <description>Formula to populate the related Entitlement Start Date.</description>
    <formula>Account_Entitlement__r.Start_Date__c</formula>
    <inlineHelpText>Formula to populate the related Entitlement Start Date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>