objects/Server_Deployment_Subscriptions__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Formula that retrieves the Module from the Related Account Entitlement.</description>
    <formula>Account_Entitlement__r.Module__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module</label>
    <type>Text</type>
</CustomField>