objects/Server_Deployment_Subscriptions__c/fields/Override_License_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_License_Start_Date__c</fullName>
    <description>This field is used by Sales Ops and Admins to manually override the License Start Date. If populated, it will impact the License Start Date field.</description>
    <inlineHelpText>This field is used by Sales Ops and Admins to manually override the License Start Date. If populated, it will impact the License Start Date field.</inlineHelpText>
    <label>Override License Start Date</label>
    <type>Date</type>
</CustomField>