objects/Server_Deployment_Subscriptions__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Formula that retrieves the Product Code from the Related Subscription Product.</description>
    <formula>Subscription__r.SBQQ__Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPQ Product Code</label>
    <type>Text</type>
</CustomField>