objects/Server_Deployment_Subscriptions__c/fields/Product_Modules__c.field-meta.xml
<CustomField>
    <fullName>Product_Modules__c</fullName>
    <label>Product Modules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>