objects/Server_Deployment_Subscriptions__c/fields/Server_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Server Deployment</label>
    <referenceTo>Server_Deployment__c</referenceTo>
    <relationshipLabel>Server Deployment Subscriptions</relationshipLabel>
    <relationshipName>Server_Deployment_Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>