objects/Server_Deployment_Subscriptions__c/fields/Sold_by_Operator_versus_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Sold_by_Operator_versus_Endpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sold by Operator versus Endpoint</label>
    <type>Checkbox</type>
</CustomField>