objects/Server_Deployment_Subscriptions__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>A hyperlink to the source record from which the Account Entitlement was created</description>
    <formula>IF(NOT(ISBLANK(Account_Entitlement__r.Source_NFR__c)), &apos;NFR: &apos; &amp; HYPERLINK(&apos;/&apos; &amp; Account_Entitlement__r.Source_NFR__c, Account_Entitlement__r.Source_NFR__r.Name),
IF(NOT(ISBLANK(Account_Entitlement__r.Source_POC_Request__c)), &apos;POC: &apos; &amp; HYPERLINK(&apos;/&apos; &amp; Account_Entitlement__r.Source_POC_Request__c, Account_Entitlement__r.Source_POC_Request__r.Name),
IF(NOT(ISBLANK(Account_Entitlement__r.Source_Subscription__c)), &apos;Subscription: &apos; &amp; HYPERLINK(&apos;/&apos; &amp; Account_Entitlement__r.Source_Subscription__c, Account_Entitlement__r.Source_Subscription__r.Name),
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A hyperlink to the source record from which the Account Entitlement was created</inlineHelpText>
    <label>Source</label>
    <type>Text</type>
</CustomField>