objects/Server_Deployment_Subscriptions__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CPQ Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Server Deployment Subscriptions</relationshipLabel>
    <relationshipName>Server_Deployment_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>