objects/Server_Deployment_Subscriptions__c/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <description>Formula to populate the related Subscription End Date.</description>
    <formula>Subscription__r.SBQQ__EndDate__c</formula>
    <inlineHelpText>Formula to populate the related Subscription End Date.</inlineHelpText>
    <label>CPQ Subscription End Date</label>
    <type>Date</type>
</CustomField>