objects/Server_Deployment_Subscriptions__c/fields/Subscription_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Line_Type__c</fullName>
    <description>The Quote Line Type from the Related Subscription. Formula field.</description>
    <formula>TEXT(Subscription__r.SBQQ__QuoteLine__r.Transaction_Type__c)</formula>
    <inlineHelpText>This is the Quote Line Type that is inherited from the Subscription, populated by a formula.</inlineHelpText>
    <label>CPQ Subscription Line Type</label>
    <type>Text</type>
</CustomField>