objects/Server_Deployment_Subscriptions__c/fields/Subscription_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Quantity__c</fullName>
    <label>Subscription Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>