objects/Server_Deployment_Subscriptions__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description>Formula to populate the related Subscription Start Date.</description>
    <formula>Subscription__r.SBQQ__StartDate__c</formula>
    <inlineHelpText>Formula to populate the related Subscription Start Date.</inlineHelpText>
    <label>CPQ Subscription Start Date</label>
    <type>Date</type>
</CustomField>