objects/Server_Deployment_Subscriptions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Server_Deployment__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Dates__c</columns>
    <columns>Subscription__c</columns>
    <columns>Subscription_Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>