objects/Server_Deployment_Subscriptions__c/listViews/Created_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Created_Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Server_Deployment__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Dates__c</columns>
    <columns>Subscription__c</columns>
    <columns>Subscription_Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Created Last 7 Days</label>
</ListView>