objects/Server_Deployment_Subscriptions__c/listViews/License_Start_Date_View.listView-meta.xml
<ListView>
    <fullName>License_Start_Date_View</fullName>
    <columns>NAME</columns>
    <columns>Server_Deployment__c</columns>
    <columns>Subscription__c</columns>
    <columns>License_Start_Date__c</columns>
    <columns>Override_License_Start_Date__c</columns>
    <columns>Subscription_Line_Type__c</columns>
    <columns>Subscription_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>License Start Date View</label>
</ListView>