objects/Server_Deployment_Subscriptions__c/listViews/Order_Ops_Sub_Link_Stella.listView-meta.xml
<ListView>
    <fullName>Order_Ops_Sub_Link_Stella</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Server_Deployment__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Dates__c</columns>
    <columns>Subscription__c</columns>
    <columns>Subscription_Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Florida Power &amp; Light Company</value>
    </filters>
    <label>Order Ops Sub Link -Stella</label>
</ListView>